CHANGED: packages for ads are different.

--- a/src/app/does-it-work/does-it-work.component.html
+++ b/src/app/does-it-work/does-it-work.component.html
@@ -23,9 +23,9 @@
         <div class="menu-padding"></div>
 
         <div class="does-itWork">
-          <h2 class="spotbie-text-gradient">ATTRACT & RETAIN USERS</h2>
+          <h2 class="spotbie-text-gradient">EXPOSURE, ACQUISITION, & RETENTION</h2>
           <h2 class="sb-text-light-green-gradient">
-            Business Growth Assistant
+            GROW YOUR BUSINESS
           </h2>
 
           <h2 class="sb-text-light-green-gradient mt-5">Our Vision</h2>
@@ -33,231 +33,138 @@
             We started SpotBie to build a highly rich user experience for people
             who love high quality products and services. This is not only true
             for consumers, but also true for business owners. At SpotBie, we aim
-            to provide businesses with an easy to use, zero loss platform that
+            to provide businesses with an easy to use and efficient platform that
             gets them the results they are looking for.
           </p>
 
-          <h2 class="sb-text-light-green-gradient mt-5">Our Features</h2>
+          <h2 class="sb-text-light-green-gradient mt-5">Features</h2>
           <ul>
-            <li>Loyalty Points and Rewards</li>
-            <li>Algorithm Calculated Exposure</li>
+            <li>Exclusivity</li>
+            <li>Loyalty Points</li>
             <li>Local Exposure</li>
-            <li>Ad Banners within our platform</li>
-            <li>SMS and E-mail Campaigns</li>
-            <li>Access to Customer Insights</li>
+            <li>Upload Rewards</li>
+            <li>Loyalty Tiers</li>
+            <li>Banner Ads</li>
+            <li>SMS & E-Mail Campaigns</li>
+            <li>Private Customer Feedback</li>
+            <li>Simple, transparent, cost efficient algorithm.</li>
           </ul>
 
-          <h2 class="sb-text-light-green-gradient mt-5">Coming Soon</h2>
-          <ul>
-            <li>Geofence Marketing</li>
-          </ul>
+          <ng-container *ngIf="!isMobile">
+            <div class="d-flex align-middle justify-content-center">
+              <button
+                class="spotbie-button sb-getStarted sbBetaBtn mt-4 mb-5"
+                (click)="calendly()"
+              >
+                SCHEDULE DEMO
+              </button>
+            </div>
+          </ng-container>
+
+          <ng-container *ngIf="isMobile">
+            <div>
+              <button
+                class="spotbie-button sb-getStarted mt-5 mb-4"
+                (click)="calendly()"
+              >
+                SCHEDULE DEMO
+              </button>
+            </div>
+          </ng-container>
+
+          <ng-container *ngIf="calendlyUp">
+            <div class="spotbie-overlay-window" style="z-index: 99">
+              <div class="sb-v-wrapper" style="display: grid; align-content: center">
+                <!-- Calendly inline widget begin -->
+                <div id="calendlyEl" class="calendly-inline-widget"></div>
+                <!-- Calendly inline widget end -->
+
+                <div
+                  class="spotbie-text-gradient text-center text-uppercase mt-4"
+                  style="cursor: pointer"
+                  (click)="calendly()"
+                >
+                  CLOSE
+                </div>
+              </div>
+            </div>
+          </ng-container>
 
           <h2 class="sb-text-light-green-gradient mt-5">
-            What problems does SpotBie solve?
+            Grow your exposure, acquisition, and retention rates.
           </h2>
           <p>
-            Loyalty programs are well known to bring in additional revenue,
-            customer retention, and brand awareness for businesses. Many large
-            franchises and retails have in-house loyalty programs. However, some
-            small businesses are left with less options to compete because they
-            lack the funding for maintaining an in-house loyalty program.
+            If you have a business and are looking to increase your revenue, then it's
+            time to give SpotBie a try. SpotBie knows what's important to get a business booming.
+            We will move exposure, acquisition, and retention rates in your business two weeks from device installation.
+            By funneling ready to spend-users to your business location we'll bump up the three key factors
+            which will push a business to become everything it was dreamt-up to be.
           </p>
-          <br />
-          <p>
-            Alternatively, some businesses use third party loyalty programs that
-            are integrated with POS systems such as Square. While this is a
-            great option, it leaves out the focus on building a highly rich
-            loyalty program experience for your users because of their broad
-            focus.
-          </p>
-          <br />
-          <p>
-            To solve these problems, we've built a platform that solely focuses
-            on loyalty programs and all their benefits while staying within an
-            affordable membership for our businesses. By focusing on bringing
-            our users what they are really interested in (savings, rewards, more
-            customers, insights, etc.) we've arrived at a solution for
-            businesses and everyday users that we think you'll like.
-          </p>
-
           <h2 class="sb-text-light-green-gradient mt-5">
-            First things first...
+            Exposure...
           </h2>
           <p>
-            By signing up through our website, you are becoming part of an
-            unequal experience. Customer service is our top priority here at
-            SpotBie. We connect with our users and community in a human-friendly
-            manner to go the extra steps and get their full satisfaction. While
-            being a client at SpotBie, you will never chat with a bot, wait long
-            times for customer service, or be served by an untrained
-            professional... and that's part of our duty to you.
+            The methods used to increase your businesses' <b>exposure rate</b> include using
+            exclusivity to bump up the quality of each impression received through the SpotBie platform.
+            Our algorithm provides savings, simplicity, and transparency. There won't be no magic tricks you have to perform
+            in order to figure out how we are charging you here. Keep bumping up your exposure rates with exciting presentation
+            methods that work and reach the right audience. The higher the quality of impressions, the higher your possibilities
+            will be of converting your users.
           </p>
-
-          <h1 class="sb-text-light-green-gradient mt-5">
-            Enter SpotBie. Why us?
-          </h1>
-          f
-          <h2 class="sb-text-light-green-gradient">
-            Grow Sales Frequency and Volume
-          </h2>
-          <p>
-            When users sign up to become SpotBie members, they make the
-            conscious decision to commit to our Community Members in exchange
-            for rewards. We <i>know</i> our Community Members offer excellent
-            products and services, now guests have an additional reason to go to
-            your business over your competition.
-          </p>
-
           <h2 class="sb-text-light-green-gradient mt-5">
-            Growing Brand Awareness
+            Acquisition...
           </h2>
           <p>
-            SpotBie gives businesses an additional tool to grow their brand.
-            Business owners can use SpotBie to deliver their product/service to
-            the right audience, be listed amongst relevant/high standard
-            businesses, and appear in users' local results.
+            You will need to attain <b>acquisition</b> to have a business that makes a significant impact. By offering incentives
+            and targeting the right people with the right exposure, your business will bumping up its acquisition rate for
+            good. As all humans, we desire gratitude. If we knew that we'd have the possibility of visiting restaurants where our opinion is
+            highly valued, or visiting restaurants where they are less valued, then there we have our answer, we'd choose being valued
+            everytime. SpotBie users know that their decisions are highly valued at SpotBie, and that's why they choose our SpotBie
+            Community Member locations to spend their money.
           </p>
-
-          <div style="padding-left: 1rem">
-            <h3 class="sb-text-light-green-gradient mt-5">
-              1. Deliver to the Right Audience
-            </h3>
-            <p>
-              When you are listed on our platform, your business starts
-              attracting users that are one step away from making a decision and
-              start spending. The primary intent our users have when they open
-              the SpotBie app is to look for something that is nearby and solve
-              their dinner or shopping plans. Quick and easy, at the tap of four
-              buttons (sometimes five), the user is provided with a list of
-              highly rated & reviewed businesses.
-            </p>
-
-            <h3 class="sb-text-light-green-gradient mt-5">
-              2. Listed Amongst Excellence
-            </h3>
-            <p>
-              At SpotBie, you are listed amongst competent businesses that make
-              excellence a habit. To being with, we take a look at ratings and
-              reviews from Yelp. If we consider a business is worth taking a
-              closer look at, we go ahead and experience their food, products,
-              or services through personal consumption. Yes... that's right, we
-              try them out ourselves! We love delicious food, great customer
-              service, and great products so we aren't willing to offer our
-              users anything less!
-            </p>
-
-            <h3 class="sb-text-light-green-gradient mt-5">3. Local Results</h3>
-            <p>
-              When listed on SpotBie, your business will appear in a map drawn
-              according to the user's distance from your store. In turn, this
-              will ramp-up your local brand awareness near your stores'
-              locations. In the other hand, if there are tourists nearby, our
-              platform simplifies the user experience so that they can easily
-              see what they have around and closest to them.
-            </p>
-
-            <!--            <h3 class="sb-text-light-green-gradient mt-5">4. Site-wide Results</h3>
-            <p>
-              Your restaurant, store, service, or event will also be featured on our site-wide results. This means that people from all
-              over the nation can search for your store online and make orders through your website while accumulating loyalty.
-            </p>-->
-          </div>
-
           <h2 class="sb-text-light-green-gradient mt-5">
-            Acquisition & Retention
+            Retention...
           </h2>
           <p>
-            Loyalty programs offer a huge incentive for guests to visit your
-            store. Here at SpotBie, we've added an extra twist that helps bring
-            new customers to your store and retain existing ones.
+            SpotBie is a solution that will retain customers efficiently by using Loyalty Points, User Engagement, Private Feedback,
+            and SMS & E-Mail notifications for your most recent guests. With SpotBie, you'll be seeing more sales more often. The SpotBie
+            Loyalty Points program keeps users in your revenue stream by creating rewards and points that help your users get closer to that
+            Ice Cream cone they'll be melting for continuously week after week. We create a spending loop that customers enjoy being a part of.
+            Loyalty and Quality at the tap of a few buttons, isn't that something we'd all wish to have?
           </p>
-
-          <div style="padding-left: 1rem">
-            <h3 class="sb-text-light-green-gradient mt-5">
-              1. The SpotBie Map
-            </h3>
-            <p>
-              Our app allows users to interactively find businesses that are
-              around them. Once they open the SpotBie app and tap on the
-              category they are searching for, they are presented with a list of
-              nearby businesses. This makes it easy for users to choose a store,
-              nearing the gap between them and gaining a new customer.
-            </p>
-
-            <h3 class="sb-text-light-green-gradient mt-5">
-              2. The SpotBie Algorithm
-            </h3>
-            <p>
-              The SpotBie algorithm periodically adjusts your business' reward
-              ratio on the platform so that you can remain competent amongst
-              other businesses. Users that look at these businesses through our
-              map can then compare reward rates and decide where to go.
-            </p>
-
-            <h3 class="sb-text-light-green-gradient mt-5">
-              3. Different Loyalty Campaigns
-            </h3>
-            <p>
-              To keep things entertaining for your customers, we have included
-              the ability to award items, discounts, and experiences.
-            </p>
-
-            <!--            <h3 class="sb-text-light-green-gradient mt-5">5. Site-wide Results</h3>
-            <p>
-              SpotBie also allows users to find site-wide stores through the search function on our website.
-            </p>
-
-            <h3 class="sb-text-light-green-gradient mt-5">6. API & Widget Integrations</h3>
-            <p>
-              Do you have an online store and wish to add a loyalty program feature into it? SpotBie can make that happen
-              for you.
-            </p>-->
-          </div>
-
-          <h2 class="sb-text-light-green-gradient mt-5">
-            Use Customer Insight
-          </h2>
+          <br/>
           <p>
-            SpotBie Community Members will have the ability to use their
-            customer's data for their marketing efforts. On our business admin
-            dashboard, you will find reports and utilities that will help
-            maximize your business's efficiency.
+            SpotBie keeps users engaged through the platform by making our app their first option when they're ready to
+            spend their money on something they want. This is because not only will users be spending their money on something they enjoy,
+            but they'll also be getting an extended token of gratitude for doing so. With features like Feedback, SMS, and E-mail, your guests will keep
+            coming back because they'll feel valued through your continuous incentives, reach, offers, updates, and improvements.
           </p>
-          <div style="padding-left: 1rem">
-            <h3 class="sb-text-light-green-gradient mt-5">
-              1. Send Promotional Content
-            </h3>
-            <p>
-              SpotBie helps your business send promotional content through
-              different methods. As a SpotBie Community Member, you are allowed
-              to send personalized e-mail campaigns, text-msgs., and nearby
-              notifications to customers who have opted to receive them.
-            </p>
 
-            <h3 class="sb-text-light-green-gradient mt-5">
-              2. New & Repeat Customers
-            </h3>
-            <p>
-              Learn which customers are in your store for the first time and
-              which ones are returning. SpotBie also recognizes which users are
-              in your store and at what time, allowing you to assign them to a
-              particular segment.
-            </p>
+          <ng-container *ngIf="!isMobile">
+            <div class="d-flex align-middle justify-content-center">
+              <button
+                class="spotbie-button sb-getStarted sbBetaBtn mt-4 mb-5"
+                (click)="calendly()"
+              >
+                SCHEDULE DEMO
+              </button>
+            </div>
+          </ng-container>
 
-            <h3 class="sb-text-light-green-gradient mt-5">
-              3. Providing User Insights
-            </h3>
-            <p>
-              SpotBie automatically gains user data and analyzes it in order to
-              get you the customer insights you need. With this data you'll be
-              able to modify your ad campaigns and marketing strategies backed
-              by factual user habits and purchase data.
-            </p>
-          </div>
+          <ng-container *ngIf="isMobile">
+            <div>
+              <button
+                class="spotbie-button sb-getStarted mt-5 mb-4"
+                (click)="calendly()"
+              >
+                SCHEDULE DEMO
+              </button>
+            </div>
+          </ng-container>
 
           <h2 class="sb-text-light-green-gradient mt-5">Questions?</h2>
           <p>
-            Don't hesitate to call! Simply dial +1 (786) 600-5946 and we'll take
+            Don't hesitate to call. Simply dial +1 (786) 600-5946 and we'll take
             your request!
           </p>
         </div>
