--- a/src/app/features/business-features/business-features.component.html
+++ b/src/app/features/business-features/business-features.component.html
@@ -85,19 +85,19 @@
     src="assets/images/home_imgs/spotbie-green-icon.svg"
   />
 
-  <h2 class="text-uppercase spotbie-text-gradient">- ACQUISITION -</h2>
+  <h2 class="text-uppercase spotbie-text-gradient">- EXPOSURE -</h2>
 
   <div class="sb-whiteIconBg right"></div>
 
   <div class="text-uppercase text-center">
     <br />
-    <h3 class="sb-text-light-green-gradient">ATTRACT</h3>
-    <h4 class="spotbie-text-gradient">LOCAL TRAFFIC WITH</h4>
+    <h3 class="sb-text-light-green-gradient">GET YOUR BUSINESS</h3>
+    <h4 class="spotbie-text-gradient">SEEN BY THE RIGHT PEOPLE</h4>
     <br />
   </div>
 
-  <p class="sb-text-light-green-gradient text-center mt-2 mb-2">
-    EXPOSURE CAMPAIGNS, REWARDS, PROXIMITY
+  <p class="spotbie-text-gradient text-center text-uppercase">
+    QUALITY <span class="sb-text-light-green-gradient">IMPRESSIONS</span>
     <br /><br />
   </p>
 
@@ -114,21 +114,20 @@
     src="assets/images/home_imgs/spotbie-green-icon.svg"
   />
 
-  <h2 class="text-uppercase spotbie-text-gradient">- RETENTION -</h2>
+  <h2 class="text-uppercase spotbie-text-gradient">- ACQUISITION -</h2>
 
-  <div class="sb-whiteIconBg left"></div>
+  <div class="sb-whiteIconBg right"></div>
 
   <div class="text-uppercase text-center">
     <br />
-    <h3 class="sb-text-light-green-gradient">WITH LOYALTY POINTS</h3>
-    <br />
-    <h4 class="spotbie-text-gradient">OFFER REWARDS</h4>
+    <h3 class="sb-text-light-green-gradient">GET MORE</h3>
+    <h4 class="spotbie-text-gradient">SALES MORE OFTEN</h4>
     <br />
   </div>
 
-  <p class="spotbie-text-gradient text-center text-uppercase">
-    Keep them <span class="sb-text-light-green-gradient">coming back</span> with
-    <span class="sb-text-light-green-gradient">rewards</span> <br /><br />
+  <p class="sb-text-light-green-gradient text-center mt-2 mb-2">
+    INCENTIVES, TARGETING, EXCLUSIVITY
+    <br /><br />
   </p>
 
   <button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="signUp()">
@@ -143,21 +142,21 @@
     class="sb-greenIcon"
     src="assets/images/home_imgs/spotbie-green-icon.svg"
   />
+  <h2 class="text-uppercase spotbie-text-gradient">- RETENTION -</h2>
 
-  <h2 class="text-uppercase spotbie-text-gradient">- ENGAGE YOUR AUDIENCE -</h2>
-
-  <div class="sb-whiteIconBg right"></div>
+  <div class="sb-whiteIconBg left"></div>
 
   <div class="text-uppercase text-center">
     <br />
-    <h3 class="sb-text-light-green-gradient">SOMETHING EXCITING</h3>
-    <h4 class="spotbie-text-gradient">FOR CONSUMERS</h4>
+    <h4 class="spotbie-text-gradient">OFFER REWARDS</h4>
+    <br />
+    <h3 class="sb-text-light-green-gradient">WITH LOYALTY POINTS</h3>
     <br />
   </div>
 
   <p class="spotbie-text-gradient text-center text-uppercase">
-    INTERACTIVE <span class="sb-text-light-green-gradient">EXPERIENCE</span>
-    <br /><br />
+    Keep them <span class="sb-text-light-green-gradient">coming back</span> with
+    <span class="sb-text-light-green-gradient">incentives</span> <br /><br />
   </p>
 
   <button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="signUp()">
