--- a/src/app/make-payment/make-payment.component.html
+++ b/src/app/make-payment/make-payment.component.html
@@ -41,41 +41,41 @@
       </p>
 
       <p class="sb-text-light-green-gradient mt-4">Loyalty Program</p>
-      <p class="sb-text-light-green-gradient mt-4">Local Exposure</p>
+      <p class="sb-text-light-green-gradient mt-1">Local Exposure</p>
       <p class="sb-text-light-green-gradient mt-1">Upload Rewards</p>
       <p class="sb-text-light-green-gradient mt-1">Loyalty Tiers</p>
       <p class="sb-text-light-green-gradient mt-1">Default Max Reward Rate</p>
-      <p class="sb-text-light-green-gradient mt-1">Header Banner Ads</p>
+      <p class="sb-text-light-green-gradient mt-1">Footer Banner Ads</p>
     </div>
 
     <div *ngIf="paymentType == 'business-membership-1'" class="mb-4">
       <p class="spotbie-text-gradient text-uppercase mt-4">
-        Business Membership $349.99/month
+        INTERMEDIATE $349.99/month
       </p>
 
       <p class="sb-text-light-green-gradient mt-4">+Starter Package</p>
       <p class="sb-text-light-green-gradient mt-1">
-        +Header & Footer Ads
+        +Header Banner Ads
       </p>
       <p class="sb-text-light-green-gradient mt-1">+5,000 SMS & 5,000 e-mail</p>
-      <p class="sb-text-light-green-gradient mt-1">+0.01% Max Reward Rate</p>
+      <p class="sb-text-light-green-gradient mt-1">+0.02% Max Reward Rate</p>
       <p class="sb-text-light-green-gradient mt-1">+Feedback</p>
       <p class="sb-text-light-green-gradient mt-1">+Customer Insights</p>
     </div>
 
     <div *ngIf="paymentType == 'business-membership-2'" class="mb-4">
       <p class="spotbie-text-gradient text-uppercase mt-4">
-        Business Membership $399.99/month
+        ULTIMATE $399.99/month
       </p>
 
       <p class="sb-text-light-green-gradient mt-4">+Starter Package</p>
       <p class="sb-text-light-green-gradient mt-1">
         +Header, Footer, Nearby Featured Ads
       </p>
-      <p class="sb-text-light-green-gradient mt-1">+0.02% Max Reward Rate</p>
-      <p class="sb-text-light-green-gradient mt-1">
-        +Customer Insights, Text Messaging, E-Mail, Push Notifications
-      </p>
+      <p class="sb-text-light-green-gradient mt-1">+0.03% Max Reward Rate</p>
+      <p class="sb-text-light-green-gradient mt-1">+10,000 SMS & 20,000 e-mails</p>
+      <p class="sb-text-light-green-gradient mt-1">+Advanced Targeting & Insights</p>
+      <p class="sb-text-light-green-gradient mt-1">+Automated Push Notifications</p>
     </div>
 
     <p class="spotbie-login-terms spotbie-text-link">
