--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -47,7 +47,7 @@
               <p class="spotbie-text-gradient">Local Exposure</p>
               <p class="spotbie-text-gradient">Upload Rewards</p>
               <p class="spotbie-text-gradient">Loyalty Tiers</p>
-              <p class="spotbie-text-gradient">Header Banner Ads</p>
+              <p class="spotbie-text-gradient">Footer Banner Ads</p>
               <p class="spotbie-text-gradient">Default Max Reward Rate</p>
             </div>
 
@@ -73,8 +73,8 @@
 
             <div class="text-uppercase text-center">
               <p class="spotbie-text-gradient">+Starter Package</p>
-              <p class="spotbie-text-gradient">+Footer Banner Ads</p>
-              <p class="spotbie-text-gradient">+0.01% Max Reward Rate</p>
+              <p class="spotbie-text-gradient">+Header Banner Ads</p>
+              <p class="spotbie-text-gradient">+0.02% Max Reward Rate</p>
               <p class="spotbie-text-gradient">+5,000 SMS & 5,000 e-mails</p>
               <p class="spotbie-text-gradient">+Feedback</p>
               <p class="spotbie-text-gradient">+Customer Insights</p>
@@ -101,7 +101,7 @@
             <div class="text-uppercase text-center">
               <p class="spotbie-text-gradient">+Starter Package</p>
               <p class="spotbie-text-gradient">+Nearby Featured Ads</p>
-              <p class="spotbie-text-gradient">+0.02% Max Reward Rate</p>
+              <p class="spotbie-text-gradient">+0.03% Max Reward Rate</p>
               <p class="spotbie-text-gradient">+10,000 SMS & 20,000 e-mails</p>
               <p class="spotbie-text-gradient">
                 +Advanced Targeting & Insights
