--- a/src/app/spotbie/spotbie-logged-in/settings/settings.component.html
+++ b/src/app/spotbie/spotbie-logged-in/settings/settings.component.html
@@ -440,7 +440,7 @@
                 <li>Local Exposure</li>
                 <li>Upload Rewards</li>
                 <li>Loyalty Tiers</li>
-                <li>Header Banner Ads</li>
+                <li>Footer Banner Ads</li>
                 <li>Default Max Reward Rate</li>
               </ul>
             </div>
@@ -456,8 +456,8 @@
               >
               <ul>
                 <li>+Starter Package</li>
-                <li>+Footer Banner Ads</li>
-                <li>+0.01% Max Reward Rate</li>
+                <li>+Header Banner Ads</li>
+                <li>+0.02% Max Reward Rate</li>
                 <li>+5,000 SMS & 5,000 e-mails</li>
                 <li>+Feedback</li>
                 <li>+Customer Insights</li>
@@ -476,7 +476,7 @@
               <ul>
                 <li>+Starter Package</li>
                 <li>+Nearby Featured Ads</li>
-                <li>+0.02% Max Reward Rate</li>
+                <li>+0.03% Max Reward Rate</li>
                 <li>+10,000 SMS & 20,000 e-mails</li>
                 <li>+Advanced Targeting & Insights</li>
                 <li>+Automated Push Notifications</li>
@@ -553,7 +553,7 @@
                   <li>Local Exposure</li>
                   <li>Upload Rewards</li>
                   <li>Loyalty Tiers</li>
-                  <li>Header Banner Ads</li>
+                  <li>Footer Banner Ads</li>
                   <li>Default Max Reward Rate</li>
                 </ul>
                 <button class="spotbie-button">BUY</button>
@@ -570,8 +570,8 @@
                 >
                 <ul>
                   <li>+Starter Package</li>
-                  <li>+Footer Banner Ads</li>
-                  <li>+0.01% Max Reward Rate</li>
+                  <li>+Header Banner Ads</li>
+                  <li>+0.02% Max Reward Rate</li>
                   <li>+5,000 SMS & 5,000 e-mails</li>
                   <li>+Feedback</li>
                   <li>+Customer Insights</li>
@@ -588,7 +588,7 @@
                 <ul>
                   <li>+Starter Package</li>
                   <li>+Nearby Featured Ads</li>
-                  <li>+0.02% Max Reward Rate</li>
+                  <li>+0.03% Max Reward Rate</li>
                   <li>+10,000 SMS & 20,000 e-mails</li>
                   <li>+Advanced Targeting & Insights</li>
                   <li>+Automated Push Notifications</li>
