--- a/src/app/how-does-it-work/how-does-it-work.component.html
+++ b/src/app/how-does-it-work/how-does-it-work.component.html
@@ -39,23 +39,12 @@
           <h2 class="sb-text-light-green-gradient mt-5">Local Exposure</h2>
           <p>
             Your business will be listed in our platform to users who are ready
-            to spend. SpotBie users open the SpotBie because they are ready to
+            to spend. SpotBie users open the SpotBie app because they are ready to
             go to the next step in the sales funnel; and that is making the
             purchase. It's just a question of where they will go now. We
             advertise our local SpotBie Community Members at different times and
-            locations. You won't have to worry about managing your ads campaign
+            locations. You won't have to worry about managing your ad campaigns
             with us.
-          </p>
-
-          <h2 class="sb-text-light-green-gradient mt-5">
-            In-Platform Advertising
-          </h2>
-          <p>
-            As part of your membership, you will receive a new in-app Ad design
-            every six months. Everyone gets a fair chance for the spot-light in
-            our app. Our algorithm assigns SpotBie Community Members Exposure in
-            a systematic manner so that all of them get the same amount of
-            views.
           </p>
 
           <h2 class="sb-text-light-green-gradient mt-5">Loyalty Points</h2>
@@ -73,11 +62,24 @@
             must spend in order to redeem this reward).
           </p>
 
+          <h2 class="sb-text-light-green-gradient mt-5">
+            In-Platform Advertising
+          </h2>
+          <p>
+            As part of your membership, you will receive a new in-app Ad design
+            every six months. Everyone gets a fair chance for the spot-light in
+            our app. Our algorithm assigns SpotBie Community Members Exposure in
+            a systematic manner so that all of them get the same amount of
+            views.
+          </p>
+
           <h2 class="sb-text-light-green-gradient mt-5">Redeeming Rewards</h2>
           <p>
             Users that go into your business can claim any of the rewards that
             you've listed on your menu as long as they have the Loyalty Point
-            balance for it.
+            balance for it. Additionally, users might be required to gain accesss
+            to loyalty tiers before they can redeem certain rewards. This is a great tool
+            for your business to thank your most frequent guests with the more exclusive rewards.
           </p>
 
           <h2 class="sb-text-light-green-gradient mt-5">Award Users</h2>
