--- a/src/app/pages/download-app/download-app.component.html
+++ b/src/app/pages/download-app/download-app.component.html
@@ -6,8 +6,17 @@
   <div class="termsWrapper mt-5 mb-5 flex-column align-content-center justify-content-center text-center">
     <h2>How to Update Your App</h2>
 
-    <div class="spotbie-button mb-5" (click)="downloadApp()">
+    <div class="spotbie-button mt-5 mb-5"
+         (click)="downloadApp()"
+         *ngIf="(canDownload$ | async) === true"
+    >
       DOWNLOAD APP
+    </div>
+
+    <div class="mt-5 mb-5 cursor-pointer"
+         *ngIf="(canDownload$ | async) === false"
+         [routerLink]="'/business'">
+      You must log-in to download.
     </div>
 
     <div class="mt-5 mb-5" *ngIf=" (_progress$ | async) > 0">
