REMOVED: sign up button is no longer needed because login takes you to the subdomain version of the site where you can sign up from there.

--- a/src/app/spotbie/spotbie-logged-out/menu-logged-out.component.html
+++ b/src/app/spotbie/spotbie-logged-out/menu-logged-out.component.html
@@ -24,9 +24,7 @@
 
       <span (click)="spawnCategories(2, false)"> RETAIL </span>
 
-      <span (click)="spawnCategories(3, false)"> EVENTS </span>
-
-      <span style="border: unset" (click)="signUp()"> SIGN UP </span>
+      <span (click)="spawnCategories(3, false)" style="border: unset"> EVENTS </span>
 
       <span class="sb-loginTop" (click)="logIn()"> LOGIN </span>
 
