CHANGED: wording for download-app page

--- a/src/app/pages/download-app/download-app.page.html
+++ b/src/app/pages/download-app/download-app.page.html
@@ -5,16 +5,19 @@
     <h2 class="mb-4">How to Update Your App</h2>
 
     <p>
-      1. Uninstall the current app by going to "Settings" > "Apps" > "SB-Business" > "Uninstall".
+      1. Download the app from the current installed version on your Android tablet.
     </p>
     <p>
-      2. Navigate to the Downloads folder by opening your Files app in your Android Tablet.
+      2. Uninstall the current app by going to "Settings" > "Apps" > "SB-Business" > "Uninstall".
     </p>
     <p>
-      3. Find the SB-Business.apk file you downloaded from the app, it might prompt you to allow installation, answer yes.
+      3. Navigate to the Downloads folder by opening your Files app in your Android Tablet.
     </p>
     <p>
-      4. Once the app is done installing, you can start using the new version.
+      4. Find the SB-Business.apk file you downloaded from the app, it might prompt you to allow installation, answer yes.
+    </p>
+    <p>
+      5. Once the app is done installing, you can start using the new version.
     </p>
   </div>
   <div class="mt-5 mb-5"></div>
