CHANGED: fixed issue with nearby featured ads not displaying porportinally and on the middle

--- a/src/app/spotbie/ads/nearby-featured-ad/nearby-featured-ad.component.css
+++ b/src/app/spotbie/ads/nearby-featured-ad/nearby-featured-ad.component.css
@@ -6,6 +6,7 @@
   margin-left: 2px;
   margin-right: 2px;
   min-height: 274px;
+  max-width: 400px;
   background-repeat: no-repeat !important;
   background-size: contain !important;
   background-position: center !important;
