Refactored some components to declare them as pages instead.

--- a/src/app/pages/delete-account/delete-account.component.css
+++ b/src/app/pages/delete-account/delete-account.component.css
@@ -1,19 +1,19 @@
 .sb-top-headerImg {
-  background: url('../../assets/images/home_imgs/spotbie-grow-your-business-with-loyalty-points.jpg')
-    no-repeat center !important;
+  background: url('../../../assets/images/home_imgs/spotbie-grow-your-business-with-loyalty-points.jpg')
+  no-repeat center !important;
   background-size: cover !important;
 }
 #sbReadImageRestaurants {
-  background: url('../../assets/images/home_imgs/jpg/spotbie-find-restaurant-customers-near-you.jpg');
+  background: url('../../../assets/images/home_imgs/jpg/spotbie-find-restaurant-customers-near-you.jpg');
 }
 #sbReadImageEvents {
-  background: url('../../assets/images/home_imgs/jpg/spotbie-find-restaurant-customers.jpg');
+  background: url('../../../assets/images/home_imgs/jpg/spotbie-find-restaurant-customers.jpg');
 }
 #sbReadImageShopping {
-  background: url('../../assets/images/home_imgs/jpg/spotbie-find-customers-near-you.jpg');
+  background: url('../../../assets/images/home_imgs/jpg/spotbie-find-customers-near-you.jpg');
 }
 #sbReadImageUsers {
-  background: url('../../assets/images/home_imgs/jpg/spotbie-miami-find-new-friends.jpg');
+  background: url('../../../assets/images/home_imgs/jpg/spotbie-miami-find-new-friends.jpg');
 }
 .fa-users,
 .fa-hamburger,
@@ -130,8 +130,8 @@ h6 {
 
 @media (max-width: 650px) {
   .sb-top-headerImg {
-    background: url('../../assets/images/home_imgs/spotbie-miami.jpg') no-repeat
-      center !important;
+    background: url('../../../assets/images/home_imgs/spotbie-miami.jpg') no-repeat
+    center !important;
     background-size: cover !important;
     box-shadow: inset 0px -80px 65px #332f3e;
     max-height: 300px;
