--- a/src/app/pages/does-it-work/does-it-work.component.html
+++ b/src/app/pages/does-it-work/does-it-work.component.html
@@ -10,7 +10,7 @@
             <td style="width: 25%">
               <img
                 class="spotbie-header-mini-logo"
-                src="assets/images/spotbie_logo_header.svg"
+                src="../../../assets/images/spotbie_logo_header.svg"
               />
             </td>
 
@@ -186,7 +186,7 @@
         <div class="sb-footer text-uppercase pt-5 pb-5">
           <p [routerLink]="['/terms']">Terms & Privacy Policy</p>
 
-          <img class="mt-3 mb-3" src="assets/images/logo_spotbie_green.svg" />
+          <img class="mt-3 mb-3" src="../../../assets/images/logo_spotbie_green.svg" />
 
           <p [routerLink]="['/terms']">SpotBie, LLC.&copy; Copyright 2023</p>
 
