--- a/src/app/pages/download-mobile/download-mobile.component.html
+++ b/src/app/pages/download-mobile/download-mobile.component.html
@@ -22,13 +22,13 @@
       <td class="cursor-pointer" (click)="downloadNowGoogle()">
         <img
           class="sb-imgDownloadApp"
-          src="../../assets/images/home_imgs/png/android_store_download.png"
+          src="../../../assets/images/home_imgs/png/android_store_download.png"
         />
       </td>
       <td class="cursor-pointer" (click)="downloadNowiOs()">
         <img
           class="sb-imgDownloadApp"
-          src="../../assets/images/home_imgs/png/apple_store.png"
+          src="../../../assets/images/home_imgs/png/apple_store.png"
         />
       </td>
     </tr>
