--- a/src/app/features/business-features/business-features.component.html
+++ b/src/app/features/business-features/business-features.component.html
@@ -187,7 +187,7 @@
 
   <img class="mt-3 mb-3" src="assets/images/logo_spotbie_green.svg" />
 
-  <p [routerLink]="['/terms']">SpotBie, LLC.&copy; Copyright 2023</p>
+  <p [routerLink]="['/terms']">SpotBie, LLC.&copy; Copyright 2024-25</p>
 
   <div class="mt-4">
     <i class="fab fa-instagram" (click)="openIg()"></i>
