--- a/src/app/features/user-features/user-features.component.html
+++ b/src/app/features/user-features/user-features.component.html
@@ -203,7 +203,7 @@
 <div class="sb-footer pt-5 pb-5">
   <p [routerLink]="['/terms']">Terms & Privacy Policy</p>
   <img class="mt-3 mb-3" src="assets/images/logo_spotbie_green.svg" />
-  <p [routerLink]="['/terms']">SpotBie, LLC.&copy; Copyright 2023</p>
+  <p [routerLink]="['/terms']">SpotBie, LLC.&copy; Copyright 2024-25</p>
 
   <div class="mt-4">
     <i class="fab fa-instagram" (click)="openIg()"></i>
