--- a/src/app/spotbie/map/map.component.html
+++ b/src/app/spotbie/map/map.component.html
@@ -731,7 +731,7 @@
     >
       <p [routerLink]="['/terms']">Terms & Privacy Policy</p>
       <img class="mt-3 mb-3" src="assets/images/logo_spotbie_green.svg" />
-      <p [routerLink]="['/terms']">SpotBie, LLC.&copy; Copyright 2023</p>
+      <p [routerLink]="['/terms']">SpotBie, LLC.&copy; Copyright 2024-25</p>
     </div>
 
     <div
