--- a/src/app/spotbie/spotbie-logged-in/user-dashboard/user-dashboard.component.html
+++ b/src/app/spotbie/spotbie-logged-in/user-dashboard/user-dashboard.component.html
@@ -62,5 +62,5 @@
 <div class="sb-footer pt-5 pb-5">
   <p [routerLink]="['/terms']">Terms & Privacy Policy</p>
   <img class="mt-3 mb-3" src="assets/images/logo_spotbie_green.svg" />
-  <p [routerLink]="['/terms']">SpotBie, LLC.&copy; Copyright 2023</p>
+  <p [routerLink]="['/terms']">SpotBie, LLC.&copy; Copyright 2024-25</p>
 </div>
